<resources>
    <string name="app_name">SleepTracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stop_txt">Stop</string>
    <string name="start_txt">Start</string>
    <string name="clear_txt">Clear</string>

    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="note_sleep_quality"><![CDATA[<b>Start:</b>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="sleep_hours"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>
    <string name="rating_negative">Rating negative</string>
    <string name="rating_zero">Rating zero</string>
    <string name="rating_one">Rating one</string>
    <string name="rating_two">Rating two</string>
    <string name="rating_three">Rating Three</string>
    <string name="sleep_rating">Sleep rating</string>
    <string name="delete_txt">Delete</string>
    <string name="sleep_quality_txt">Sleep quality</string>
    <string name="header_txt">Sleep Tracker App</string>

</resources>
