<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="trackerViewModel"
            type="com.aiwamob.sleeptracker.ui.tracker.TrackerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#f5f5f5"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/stopRecordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato"
            style="@style/Widget.App.Button"
            android:text="@string/stop_txt"
            android:onClick="@{() -> trackerViewModel.stopTrackingSleep()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:enabled="@{trackerViewModel.stopButtonVisibility}"/>

        <Button
            android:id="@+id/startRecordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato"
            android:onClick="@{() -> trackerViewModel.startTrackingSleep()}"
            android:text="@string/start_txt"
            app:layout_constraintBottom_toBottomOf="@+id/stopRecordButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:enabled="@{trackerViewModel.startButtonVisibility}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sleepRecyclerList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/clearButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stopRecordButton"/>

        <Button
            android:id="@+id/clearButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:enabled="@{trackerViewModel.clearButtonVisibility}"
            android:fontFamily="@font/lato"
            android:onClick="@{() -> trackerViewModel.clear()}"
            android:text="@string/clear_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>